@@ -1,48 +1,43 @@
 package datawave.ingest.mapreduce.job;
 
-import datawave.ingest.config.TableConfigCache;
-import datawave.ingest.data.Type;
-import datawave.ingest.data.TypeRegistry;
-import datawave.ingest.data.config.ConfigurationHelper;
-import datawave.ingest.data.config.DataTypeHelper;
-import datawave.ingest.data.config.ingest.AccumuloHelper;
-import datawave.ingest.input.reader.event.EventSequenceFileInputFormat;
-import datawave.ingest.mapreduce.EventMapper;
-import datawave.ingest.mapreduce.handler.JobSetupHandler;
-import datawave.ingest.mapreduce.handler.shard.NumShards;
-import datawave.ingest.mapreduce.job.reduce.BulkIngestKeyAggregatingReducer;
-import datawave.ingest.mapreduce.job.reduce.BulkIngestKeyDedupeCombiner;
-import datawave.ingest.mapreduce.job.statsd.CounterStatsDClient;
-import datawave.ingest.mapreduce.job.statsd.CounterToStatsDConfiguration;
-import datawave.ingest.mapreduce.job.writer.AbstractContextWriter;
-import datawave.ingest.mapreduce.job.writer.AggregatingContextWriter;
-import datawave.ingest.mapreduce.job.writer.BulkContextWriter;
-import datawave.ingest.mapreduce.job.writer.ChainedContextWriter;
-import datawave.ingest.mapreduce.job.writer.ContextWriter;
-import datawave.ingest.mapreduce.job.writer.DedupeContextWriter;
-import datawave.ingest.mapreduce.job.writer.LiveContextWriter;
-import datawave.ingest.mapreduce.job.writer.TableCachingContextWriter;
-import datawave.ingest.mapreduce.partition.MultiTableRangePartitioner;
-import datawave.ingest.metric.IngestInput;
-import datawave.ingest.metric.IngestOutput;
-import datawave.ingest.metric.IngestProcess;
-import datawave.marking.MarkingFunctions;
-import datawave.util.StringUtils;
-import datawave.util.cli.PasswordConverter;
+import java.io.BufferedInputStream;
+import java.io.BufferedOutputStream;
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
+import java.io.FilenameFilter;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.io.PrintStream;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
+import java.text.SimpleDateFormat;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Observer;
+import java.util.Set;
 
 import org.apache.accumulo.core.Constants;
 import org.apache.accumulo.core.client.Accumulo;
-import org.apache.accumulo.core.client.AccumuloClient;
 import org.apache.accumulo.core.client.AccumuloException;
 import org.apache.accumulo.core.client.AccumuloSecurityException;
-import org.apache.accumulo.core.client.IteratorSetting;
-import org.apache.accumulo.core.client.NamespaceExistsException;
 import org.apache.accumulo.core.client.TableExistsException;
 import org.apache.accumulo.core.client.TableNotFoundException;
-import org.apache.accumulo.core.client.admin.NamespaceOperations;
-import org.apache.accumulo.core.client.admin.TableOperations;
 import org.apache.accumulo.core.client.security.tokens.PasswordToken;
-import org.apache.accumulo.core.conf.Property;
 import org.apache.accumulo.core.data.ColumnUpdate;
 import org.apache.accumulo.core.data.Key;
 import org.apache.accumulo.core.data.KeyValue;
@@ -88,35 +83,35 @@ import org.apache.log4j.Level;
 import org.apache.log4j.Logger;
 import org.apache.log4j.PatternLayout;
 
-import java.io.BufferedInputStream;
-import java.io.BufferedOutputStream;
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.FilenameFilter;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.io.OutputStream;
-import java.io.PrintStream;
-import java.lang.reflect.Method;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Observer;
-import java.util.Set;
+import datawave.ingest.config.TableConfigCache;
+import datawave.ingest.data.Type;
+import datawave.ingest.data.TypeRegistry;
+import datawave.ingest.data.config.ConfigurationHelper;
+import datawave.ingest.data.config.DataTypeHelper;
+import datawave.ingest.data.config.ingest.AccumuloHelper;
+import datawave.ingest.input.reader.event.EventSequenceFileInputFormat;
+import datawave.ingest.mapreduce.EventMapper;
+import datawave.ingest.mapreduce.handler.JobSetupHandler;
+import datawave.ingest.mapreduce.handler.shard.NumShards;
+import datawave.ingest.mapreduce.job.reduce.BulkIngestKeyAggregatingReducer;
+import datawave.ingest.mapreduce.job.reduce.BulkIngestKeyDedupeCombiner;
+import datawave.ingest.mapreduce.job.statsd.CounterStatsDClient;
+import datawave.ingest.mapreduce.job.statsd.CounterToStatsDConfiguration;
+import datawave.ingest.mapreduce.job.writer.AbstractContextWriter;
+import datawave.ingest.mapreduce.job.writer.AggregatingContextWriter;
+import datawave.ingest.mapreduce.job.writer.BulkContextWriter;
+import datawave.ingest.mapreduce.job.writer.ChainedContextWriter;
+import datawave.ingest.mapreduce.job.writer.ContextWriter;
+import datawave.ingest.mapreduce.job.writer.DedupeContextWriter;
+import datawave.ingest.mapreduce.job.writer.LiveContextWriter;
+import datawave.ingest.mapreduce.job.writer.TableCachingContextWriter;
+import datawave.ingest.mapreduce.partition.MultiTableRangePartitioner;
+import datawave.ingest.metric.IngestInput;
+import datawave.ingest.metric.IngestOutput;
+import datawave.ingest.metric.IngestProcess;
+import datawave.marking.MarkingFunctions;
+import datawave.util.StringUtils;
+import datawave.util.cli.PasswordConverter;
 
 /**
  * Class that starts a MapReduce job to create Accumulo Map files that to be bulk imported into Accumulo If outputMutations is specified, then Mutations are
@@ -134,14 +129,14 @@ import java.util.Set;
  * {@code <workDir>/mapFiles} directory For live ingest the AccumuloOutputFormat is then used to apply the mutations directly to accumulo
  */
 public class IngestJob implements Tool {
-    
+
     public static final String DAEMON_PROCESSES_PROPERTY = "accumulo.ingest.daemons";
     public static final String REDUCE_TASKS_ARG_PREFIX = "-mapreduce.job.reduces=";
-    
+
     protected boolean eventProcessingError = false;
     protected Logger log = Logger.getLogger("datawave.ingest");
     private ConsoleAppender ca = new ConsoleAppender();
-    
+
     protected ArrayList<String[]> confOverrides = new ArrayList<>();
     protected int reduceTasks = 0;
     protected String inputPaths = null;
@@ -151,7 +146,7 @@ public class IngestJob implements Tool {
     // where the initial part of the file is our script line and the remainder contains the actual file list
     protected String inputFileListMarker = null;
     protected String idFilterFsts = null;
-    
+
     protected String workDir = null;
     protected Set<String> tableNames = null;
     protected String flagFile = null;
@@ -178,19 +173,19 @@ public class IngestJob implements Tool {
     private String metricsLabelOverride = null;
     protected boolean generateMapFileRowKeys = false;
     protected String compressionType = null;
-    protected final Set<String> compressionTableBlackList = new HashSet<>();
+    protected final Set<String> compressionTableDisallowList = new HashSet<>();
     protected int maxRFileEntries = 0;
     protected long maxRFileSize = 0;
     @SuppressWarnings("rawtypes")
     protected Class<? extends InputFormat> inputFormat = EventSequenceFileInputFormat.class;
     @SuppressWarnings("rawtypes")
     protected Class<? extends Mapper> mapper = EventMapper.class;
-    
+
     protected String instanceName = null;
     protected String zooKeepers = null;
     protected String userName = null;
     protected byte[] password = null;
-    
+
     protected URI srcHdfs = null;
     protected URI destHdfs = null;
     protected String distCpConfDir = null;
@@ -198,20 +193,20 @@ public class IngestJob implements Tool {
     protected int distCpMaxMaps = 200;
     protected String distCpStrategy = "dynamic";
     protected boolean deleteAfterDistCp = true;
-    
+
     protected ArrayList<Path> jobDependencies = new ArrayList<>();
-    
+
     protected boolean writeDirectlyToDest = false;
-    
+
     private Configuration hadoopConfiguration;
     private List<Observer> jobObservers = new ArrayList<>();
     private JobObservable jobObservable;
-    
+
     public static void main(String[] args) throws Exception {
         System.out.println("Running main");
         System.exit(ToolRunner.run(null, new IngestJob(), args));
     }
-    
+
     protected void printUsage() {
         System.out.println("Usage: " + getClass().getSimpleName() + " inputpath configfile configfile");
         System.out.println("                     -user username -pass password -instance instanceName");
@@ -248,37 +243,37 @@ public class IngestJob implements Tool {
         System.out.println("                     [-ingestMetricsDisabled]");
         System.out.println("                     [-ingestMetricsLabel label]");
         System.out.println("                     [-compressionType lzo|gz]");
-        System.out.println("                     [-compressionTableBlackList table,table,...");
+        System.out.println("                     [-compressionTableDisallowList table,table,...");
         System.out.println("                     [-maxRFileUndeduppedEntries maxEntries]");
         System.out.println("                     [-maxRFileUncompressedSize maxSize]");
         System.out.println("                     [-jobObservers jobObserverClasses]");
         System.out.println("                     [-shardedMapFiles table1=/hdfs/path/table1splits.seq[,table2=/hdfs/path/table2splits.seq] ]");
     }
-    
+
     @Override
     public int run(String[] args) throws Exception {
-        
+
         Logger.getLogger(TypeRegistry.class).setLevel(Level.ALL);
 
         ca.setLayout(new PatternLayout("%p [%c{1}] %m%n"));
         ca.setThreshold(Level.INFO);
         log.addAppender(ca);
         log.setLevel(Level.INFO);
-        
+
         // Initialize the markings file helper so we get the right markings file
         MarkingFunctions.Factory.createMarkingFunctions();
         TypeRegistry.reset();
-        
+
         // Parse the job arguments
         Configuration conf = parseArguments(args, this.getConf());
-        
+
         if (conf == null) {
             printUsage();
             return -1;
         }
-        
+
         updateConfWithOverrides(conf);
-        
+
         jobObservable = new JobObservable(srcHdfs != null ? getFileSystem(conf, srcHdfs) : null);
         for (Observer observer : jobObservers) {
             this.jobObservable.addObserver(observer);
@@ -287,12 +282,12 @@ public class IngestJob implements Tool {
                 ((Configurable) observer).setConf(conf);
             }
         }
-        
+
         AccumuloHelper cbHelper = new AccumuloHelper();
         cbHelper.setup(conf);
-        
+
         TypeRegistry.getInstance(conf);
-        
+
         log.info(conf.toString());
         log.info(String.format("getStrings('%s') = %s", TypeRegistry.INGEST_DATA_TYPES, conf.get(TypeRegistry.INGEST_DATA_TYPES)));
         log.info(String.format("getStrings('data.name') = %s", conf.get("data.name")));
@@ -300,45 +295,36 @@ public class IngestJob implements Tool {
         for (String name : TypeRegistry.getTypeNames()) {
             log.info(String.format("name[%d] = '%s'", index++, name));
         }
-        
+
         if (TypeRegistry.getTypes().isEmpty()) {
             log.error("No data types were configured");
             return -1;
         }
-        
-        TableConfigurationUtil tableConfigUtil = new TableConfigurationUtil(conf);
-        tableConfigUtil.registerTableNamesFromConfigFiles(conf);
-        tableNames = tableConfigUtil.getJobOutputTableNames(conf);
-        
+
+        this.tableNames = setupAndCacheTables(conf, createTables);
         if (createTables) {
-            boolean wasConfigureTablesSuccessful = tableConfigUtil.configureTables(conf);
-            if (!wasConfigureTablesSuccessful) {
-                return -1;
-            } else
-                log.info("Created tables: " + tableNames + " successfully!");
+            log.info("Created tables: " + tableNames + " successfully!");
         }
-        
-        tableConfigUtil.serializeTableConfgurationIntoConf(conf);
-        
+
         // get the source and output hadoop file systems
         FileSystem inputFs = getFileSystem(conf, srcHdfs);
         FileSystem outputFs = (writeDirectlyToDest ? getFileSystem(conf, destHdfs) : inputFs);
         conf.set("output.fs.uri", outputFs.getUri().toString());
-        
+
         // get the qualified work directory path
         Path unqualifiedWorkPath = Path.getPathWithoutSchemeAndAuthority(new Path(workDir));
         conf.set("ingest.work.dir.unqualified", unqualifiedWorkPath.toString());
         Path workDirPath = new Path(new Path(writeDirectlyToDest ? destHdfs : srcHdfs), unqualifiedWorkPath);
         conf.set("ingest.work.dir.qualified", workDirPath.toString());
-        
+
         // Create the Job
         Job job = Job.getInstance(conf);
         // Job copies the configuration, so any changes made after this point don't get captured in the job.
         // Use the job's configuration from this point.
         conf = job.getConfiguration();
-        
+
         setupHandlers(conf);
-        
+
         if (!useMapOnly || !outputMutations) {
             // Calculate the sampled splits, splits file, and set up the partitioner, but not if only doing only a map phase and outputting mutations
             // if not outputting mutations and only doing a map phase, we still need to go through this logic as the MultiRFileOutputFormatter
@@ -356,18 +342,18 @@ public class IngestJob implements Tool {
                 return -1;
             }
         }
-        
+
         job.setJarByClass(this.getClass());
         for (Path inputPath : getFilesToProcess(inputFs, inputFileLists, inputFileListMarker, inputPaths)) {
             FileInputFormat.addInputPath(job, inputPath);
         }
         for (Path dependency : jobDependencies)
             job.addFileToClassPath(dependency);
-        
+
         configureInputFormat(job, cbHelper, conf);
-        
+
         configureJob(job, conf, workDirPath, outputFs);
-        
+
         // Log configuration
         log.info("Types: " + TypeRegistry.getTypeNames());
         log.info("Tables: " + tableNames);
@@ -375,19 +361,19 @@ public class IngestJob implements Tool {
         log.info("Mapper: " + job.getMapperClass().getName());
         log.info("Reduce tasks: " + (useMapOnly ? 0 : reduceTasks));
         log.info("Split File: " + workDirPath + "/splits.txt");
-        
+
         // Note that if we run any other jobs in the same vm (such as a sampler), then we may
         // need to catch and throw away an exception here
         URL.setURLStreamHandlerFactory(new FsUrlStreamHandlerFactory(conf));
-        
+
         startDaemonProcesses(conf);
         long start = System.currentTimeMillis();
         job.submit();
         JobID jobID = job.getJobID();
         log.info("JOB ID: " + jobID);
-        
+
         createFileWithRetries(outputFs, new Path(workDirPath, jobID.toString()));
-        
+
         // Wait for reduce progress to pass the 30% mark and then
         // kick off the next job of this type.
         boolean done = false;
@@ -434,21 +420,21 @@ public class IngestJob implements Tool {
                 }
             }
         }
-        
+
         job.waitForCompletion(true);
         long stop = System.currentTimeMillis();
-        
+
         // output the counters to the log
         Counters counters = job.getCounters();
         log.info(counters);
         try (JobClient jobClient = new JobClient((org.apache.hadoop.mapred.JobConf) job.getConfiguration())) {
             RunningJob runningJob = jobClient.getJob(new org.apache.hadoop.mapred.JobID(jobID.getJtIdentifier(), jobID.getId()));
-            
+
             // If the job failed, then don't bring the map files online.
             if (!job.isSuccessful()) {
                 return jobFailed(job, runningJob, outputFs, workDirPath);
             }
-            
+
             // determine if we had processing errors
             if (counters.findCounter(IngestProcess.RUNTIME_EXCEPTION).getValue() > 0) {
                 eventProcessingError = true;
@@ -464,7 +450,7 @@ public class IngestJob implements Tool {
                     numRecords += recordC.getValue();
                 }
                 // records that throw runtime exceptions are still counted as processed
-                float percentError = 100 * ((float) numExceptions / numRecords);
+                float percentError = (numRecords == 0) ? 0.0f : 100 * ((float) numExceptions / numRecords);
                 log.info(String.format("Percent Error: %.2f", percentError));
                 if (conf.getInt("job.percent.error.threshold", 101) <= percentError) {
                     return jobFailed(job, runningJob, outputFs, workDirPath);
@@ -475,7 +461,7 @@ public class IngestJob implements Tool {
             eventProcessingError = true;
             log.error("Found Fatal Errors in the counters");
         }
-        
+
         // If we're doing "live" ingest (sending mutations to accumulo rather than
         // bringing map files online), then simply delete the workDir since it
         // doesn't contain anything we need. If we are doing bulk ingest, then
@@ -490,7 +476,7 @@ public class IngestJob implements Tool {
         } else {
             // now move the job directory over to the warehouse if needed
             FileSystem destFs = getFileSystem(conf, destHdfs);
-            
+
             if (!inputFs.equals(destFs) && !writeDirectlyToDest) {
                 Configuration distCpConf = conf;
                 // Use the configuration dir specified on the command-line for DistCP if necessary.
@@ -506,7 +492,7 @@ public class IngestJob implements Tool {
                         distCpConf.addResource(path);
                     }
                 }
-                
+
                 log.info("Moving (using distcp) " + unqualifiedWorkPath + " from " + inputFs.getUri() + " to " + destFs.getUri());
                 try {
                     distCpDirectory(unqualifiedWorkPath, inputFs, destFs, distCpConf, deleteAfterDistCp);
@@ -515,7 +501,7 @@ public class IngestJob implements Tool {
                     return -3;
                 }
             }
-            
+
             Path destWorkDirPath = FileSystem.get(destHdfs, conf).makeQualified(unqualifiedWorkPath);
             boolean marked = markJobComplete(destFs, destWorkDirPath);
             if (!marked) {
@@ -523,10 +509,10 @@ public class IngestJob implements Tool {
                 return -3;
             }
         }
-        
+
         // if we had a failure writing the metrics, or we have event processing errors, then return -5
         // this should result in administrators getting an email, but the job will be considered successful
-        
+
         if (metricsOutputEnabled) {
             log.info("Writing Stats");
             Path statsDir = new Path(unqualifiedWorkPath.getParent(), "IngestMetrics");
@@ -537,57 +523,57 @@ public class IngestJob implements Tool {
         } else {
             log.info("Ingest stats output disabled via 'ingestMetricsDisabled' flag");
         }
-        
+
         if (eventProcessingError) {
             log.warn("Job had processing errors.  See counters for more information");
             return -5;
         }
-        
+
         return 0;
     }
-    
+
     private void setupHandlers(Configuration conf) {
         // default to all types
         Collection<Type> types = TypeRegistry.getTypes();
-        
+
         // when an override is specified only load handlers associated with that data type
         String override = conf.get(DataTypeHelper.Properties.DATA_NAME_OVERRIDE);
         if (override != null) {
             types = Collections.singleton(TypeRegistry.getType(override));
         }
-        
+
         for (Type t : types) {
             String[] handlers = t.getDefaultDataTypeHandlers();
             if (handlers != null) {
                 for (String handler : handlers) {
                     try {
-                        Object o = Class.forName(handler).newInstance();
+                        Object o = Class.forName(handler).getDeclaredConstructor().newInstance();
                         if (o instanceof JobSetupHandler) {
                             JobSetupHandler setupHandler = (JobSetupHandler) o;
                             conf.set(DataTypeHelper.Properties.DATA_NAME, t.typeName());
                             setupHandler.setup(conf);
                         }
-                    } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+                    } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                         log.warn("Could not setup handler: " + handler, e);
                     }
                 }
             }
         }
     }
-    
+
     protected Configuration interpolateEnvironment(Configuration conf) {
         // We have set up the Configuration, now replace all instances of ${DATAWAVE_INGEST_HOME} with
         // the value that is set in the environment.
         String ingestHomeValue = System.getenv("DATAWAVE_INGEST_HOME");
         if (null == ingestHomeValue)
             throw new IllegalArgumentException("DATAWAVE_INGEST_HOME must be set in the environment.");
-        
+
         log.info("Replacing ${DATAWAVE_INGEST_HOME} with " + ingestHomeValue);
-        
+
         return ConfigurationHelper.interpolate(conf, "\\$\\{DATAWAVE_INGEST_HOME\\}", ingestHomeValue);
-        
+
     }
-    
+
     /**
      * Parse the arguments and update the configuration as needed
      *
@@ -595,15 +581,15 @@ public class IngestJob implements Tool {
      *            the args
      * @param conf
      *            the config
+     * @return the configuration
      * @throws ClassNotFoundException
      *             if class is not found
      * @throws URISyntaxException
      *             if there are issues with URI syntax
-     * @return the configuration
      */
     protected Configuration parseArguments(String[] args, Configuration conf) throws ClassNotFoundException, URISyntaxException, IllegalArgumentException {
         List<String> activeResources = new ArrayList<>();
-        
+
         inputPaths = args[0];
         log.info("InputPaths is " + inputPaths);
         for (int i = 1; i < args.length; i++) {
@@ -723,9 +709,9 @@ public class IngestJob implements Tool {
                 generateMapFileRowKeys = true;
             } else if (args[i].equals("-compressionType")) {
                 compressionType = args[++i];
-            } else if (args[i].equals("-compressionTableBlackList")) {
+            } else if (args[i].equals("-compressionTableDisallowList")) {
                 String[] tables = StringUtils.split(args[++i], ',');
-                compressionTableBlackList.addAll(Arrays.asList(tables));
+                compressionTableDisallowList.addAll(Arrays.asList(tables));
             } else if (args[i].equals("-maxRFileUndeduppedEntries")) {
                 maxRFileEntries = Integer.parseInt(args[++i]);
             } else if (args[i].equals("-maxRFileUncompressedSize")) {
@@ -773,13 +759,13 @@ public class IngestJob implements Tool {
                 activeResources.add(args[i]);
             }
         }
-        
+
         conf = interpolateEnvironment(conf);
-        
+
         for (String resource : activeResources) {
             conf.addResource(resource);
         }
-        
+
         // To enable passing the MONITOR_SERVER_HOME environment variable through to the monitor,
         // pull it into the configuration
         String monitorHostValue = System.getenv("MONITOR_SERVER_HOST");
@@ -787,35 +773,35 @@ public class IngestJob implements Tool {
         if (null != monitorHostValue) {
             conf.set("MONITOR_SERVER_HOST", monitorHostValue);
         }
-        
+
         if (workDir == null) {
             log.error("ERROR: Must provide a working directory name");
             return null;
         }
-        
+
         if ((!useMapOnly) && (reduceTasks == 0)) {
             log.error("ERROR: -mapred.reduce.tasks must be set");
             return null;
         }
-        
+
         if (flagFileDir == null && generateMarkerFile) {
             log.error("ERROR: -flagFileDir must be set");
             return null;
         }
-        
+
         if (useMapOnly && !outputMutations) {
             log.error("ERROR: Cannot do bulk ingest mapOnly (i.e. without the reduce phase).  Bulk ingest required sorted keys.");
             return null;
         }
-        
+
         if (!outputMutations && destHdfs == null) {
             log.error("ERROR: -destHdfs must be specified for bulk ingest");
             return null;
         }
-        
+
         return conf;
     }
-    
+
     /**
      * Configure the partitioner and the output formatter.
      *
@@ -848,13 +834,13 @@ public class IngestJob implements Tool {
         conf.setInt("splits.num.reduce", this.reduceTasks);
         // used by the output formatter and the sharded partitioner
         ShardedTableMapFile.setupFile(conf);
-        
+
         conf.setInt(MultiRFileOutputFormatter.EVENT_PARTITION_COUNT, this.reduceTasks * 2);
-        configureMultiRFileOutputFormatter(conf, compressionType, compressionTableBlackList, maxRFileEntries, maxRFileSize, generateMapFileRowKeys);
+        configureMultiRFileOutputFormatter(conf, compressionType, compressionTableDisallowList, maxRFileEntries, maxRFileSize, generateMapFileRowKeys);
         String[] tables = tableNames.toArray(new String[tableNames.size()]);
         DelegatingPartitioner.configurePartitioner(job, conf, tables); // sets the partitioner
     }
-    
+
     protected void configureInputFormat(Job job, AccumuloHelper cbHelper, Configuration conf) throws Exception {
         // see if we need to do any accumulo setup on the input format class (initial for EventProcessingErrorTableFileInputFormat)
         if (inputFormat != null) {
@@ -869,12 +855,12 @@ public class IngestJob implements Tool {
             job.setInputFormatClass(inputFormat);
         }
     }
-    
+
     protected void configureJob(Job job, Configuration conf, Path workDirPath, FileSystem outputFs) throws Exception {
         // create a job name
         SimpleDateFormat format = new SimpleDateFormat("yyyyMMddHHmmss.SSS");
         job.setJobName(IngestJob.class.getSimpleName() + "_" + format.format(new Date()));
-        
+
         // if doing this as a bulk job, create the job.paths file and the flag file if supplied
         if (!outputMutations) {
             writeInputPathsFile(outputFs, workDirPath, FileInputFormat.getInputPaths(job));
@@ -882,19 +868,19 @@ public class IngestJob implements Tool {
                 writeFlagFile(outputFs, workDirPath, flagFile);
             }
         }
-        
+
         // Setup the Mapper
         job.setMapperClass(mapper);
         job.setSortComparatorClass(BulkIngestKey.Comparator.class);
-        
+
         if (idFilterFsts != null) {
             job.getConfiguration().set(EventMapper.ID_FILTER_FSTS, idFilterFsts);
         }
-        
+
         // Setup the context writer counters boolean
         job.getConfiguration().setBoolean(AbstractContextWriter.CONTEXT_WRITER_COUNTERS, contextWriterCounters);
         job.getConfiguration().setBoolean(EventMapper.FILE_NAME_COUNTERS, fileNameCounters);
-        
+
         // if we are using the combiner, then ensure the flag is set
         if (useCombiner || useInlineCombiner) {
             job.getConfiguration().setBoolean(BulkIngestKeyDedupeCombiner.USING_COMBINER, true);
@@ -906,16 +892,16 @@ public class IngestJob implements Tool {
                 log.info("Using an inline combiner");
             }
         }
-        
+
         // Setup the job output and reducer classes
         if (outputMutations) {
             job.setOutputKeyClass(Text.class);
             job.setOutputValueClass(Mutation.class);
-            
+
             if (!useMapOnly) {
                 job.setMapOutputKeyClass(BulkIngestKey.class);
                 job.setMapOutputValueClass(Value.class);
-                
+
                 if (useCombiner) {
                     // Dedupe combiner will remove dupes and reset timestamps
                     // Note: to guarantee the combiner runs we need the min combine splits to be 1
@@ -923,7 +909,7 @@ public class IngestJob implements Tool {
                     job.getConfiguration().setClass(BulkIngestKeyDedupeCombiner.CONTEXT_WRITER_CLASS, BulkContextWriter.class, ContextWriter.class);
                     job.setCombinerClass(BulkIngestKeyDedupeCombiner.class);
                 }
-                
+
                 if (useInlineCombiner) {
                     // The dedupe context writer invokes the BulkIngestKeyDedupeCombiner.
                     // We are running the DedupeContextWriter in the context writer stream instead of using a combiner for performance reasons
@@ -933,7 +919,7 @@ public class IngestJob implements Tool {
                     job.getConfiguration().setClass(EventMapper.CONTEXT_WRITER_CLASS, TableCachingContextWriter.class, ChainedContextWriter.class);
                 }
                 job.getConfiguration().setClass(TableCachingContextWriter.CONTEXT_WRITER_CLASS, BulkContextWriter.class, ContextWriter.class);
-                
+
                 // Aggregating reducer will remove dupes for each reduce task and reset the reset timestamps
                 // The reducer will take care of translating from BulkIngestKeys to Mutations by using the LiveContextWriter
                 job.getConfiguration().setClass(BulkIngestKeyAggregatingReducer.CONTEXT_WRITER_CLASS, LiveContextWriter.class, ContextWriter.class);
@@ -942,28 +928,28 @@ public class IngestJob implements Tool {
             } else {
                 job.setMapOutputKeyClass(Text.class);
                 job.setMapOutputValueClass(Mutation.class);
-                
+
                 // The dedupe context writer invokes the BulkIngestKeyDedupeCombiner, and the aggregating context writer
                 // invokes the BulkIngestKeyAggregatingReducer. The LiveContextWriter will take care of translating from BulkIngestKeys to Mutations
                 job.getConfiguration().setBoolean(EventMapper.CONTEXT_WRITER_OUTPUT_TABLE_COUNTERS, tableCounters);
-                
+
                 if (useCombiner || useInlineCombiner) {
                     job.getConfiguration().setClass(EventMapper.CONTEXT_WRITER_CLASS, DedupeContextWriter.class, ChainedContextWriter.class);
                     job.getConfiguration().setClass(DedupeContextWriter.CONTEXT_WRITER_CLASS, TableCachingContextWriter.class, ContextWriter.class);
                 } else {
                     job.getConfiguration().setClass(EventMapper.CONTEXT_WRITER_CLASS, TableCachingContextWriter.class, ChainedContextWriter.class);
                 }
-                
+
                 job.getConfiguration().setClass(TableCachingContextWriter.CONTEXT_WRITER_CLASS, AggregatingContextWriter.class, ContextWriter.class);
                 job.getConfiguration().setClass(AggregatingContextWriter.CONTEXT_WRITER_CLASS, LiveContextWriter.class, ContextWriter.class);
             }
-            
+
         } else {
             job.setMapOutputKeyClass(BulkIngestKey.class);
             job.setMapOutputValueClass(Value.class);
             job.setOutputKeyClass(BulkIngestKey.class);
             job.setOutputValueClass(Value.class);
-            
+
             if (!useMapOnly) {
                 if (useCombiner) {
                     // Dedupe combiner will remove dupes and reset timestamps
@@ -972,7 +958,7 @@ public class IngestJob implements Tool {
                     job.getConfiguration().setClass(BulkIngestKeyDedupeCombiner.CONTEXT_WRITER_CLASS, BulkContextWriter.class, ContextWriter.class);
                     job.setCombinerClass(BulkIngestKeyDedupeCombiner.class);
                 }
-                
+
                 if (useInlineCombiner) {
                     // The dedupe context writer invokes the BulkIngestKeyDedupeCombiner.
                     // We are running the DedupeContextWriter in the context writer stream instead of using a combiner for performance reasons
@@ -982,7 +968,7 @@ public class IngestJob implements Tool {
                     job.getConfiguration().setClass(EventMapper.CONTEXT_WRITER_CLASS, TableCachingContextWriter.class, ChainedContextWriter.class);
                 }
                 job.getConfiguration().setClass(TableCachingContextWriter.CONTEXT_WRITER_CLASS, BulkContextWriter.class, ContextWriter.class);
-                
+
                 // Aggregating reducer will remove dupes for each reduce task and reset the reset timestamps
                 job.getConfiguration().setClass(BulkIngestKeyAggregatingReducer.CONTEXT_WRITER_CLASS, BulkContextWriter.class, ContextWriter.class);
                 job.getConfiguration().setBoolean(BulkIngestKeyAggregatingReducer.CONTEXT_WRITER_OUTPUT_TABLE_COUNTERS, tableCounters);
@@ -991,19 +977,19 @@ public class IngestJob implements Tool {
                 // The dedupe context writer invokes the BulkIngestKeyDedupeCombiner, and the aggregating context writer
                 // invokes the BulkIngestKeyAggregatingReducer. The LiveContextWriter will take care of translating from BulkIngestKeys to Mutations
                 job.getConfiguration().setBoolean(EventMapper.CONTEXT_WRITER_OUTPUT_TABLE_COUNTERS, tableCounters);
-                
+
                 if (useCombiner || useInlineCombiner) {
                     job.getConfiguration().setClass(EventMapper.CONTEXT_WRITER_CLASS, DedupeContextWriter.class, ChainedContextWriter.class);
                     job.getConfiguration().setClass(DedupeContextWriter.CONTEXT_WRITER_CLASS, TableCachingContextWriter.class, ContextWriter.class);
                 } else {
                     job.getConfiguration().setClass(EventMapper.CONTEXT_WRITER_CLASS, TableCachingContextWriter.class, ChainedContextWriter.class);
                 }
-                
+
                 job.getConfiguration().setClass(TableCachingContextWriter.CONTEXT_WRITER_CLASS, AggregatingContextWriter.class, ContextWriter.class);
                 job.getConfiguration().setClass(AggregatingContextWriter.CONTEXT_WRITER_CLASS, BulkContextWriter.class, ContextWriter.class);
             }
         }
-        
+
         // If only doing a map phase, then no reduce tasks to run
         if (useMapOnly) {
             job.setNumReduceTasks(0);
@@ -1011,7 +997,7 @@ public class IngestJob implements Tool {
         } else {
             job.setNumReduceTasks(reduceTasks);
         }
-        
+
         // Turn off speculative execution if we're using live ingest.
         // We don't want to send the same mutations to accumulo multiple times.
         // Normally for bulk we use speculative execution since there are no
@@ -1022,42 +1008,40 @@ public class IngestJob implements Tool {
             setMapSpeculativeExecution(job.getConfiguration(), false);
             setReduceSpeculativeExecution(job.getConfiguration(), false);
         }
-        
+
         // Setup the Output
         job.setWorkingDirectory(workDirPath);
         if (outputMutations) {
-            CBMutationOutputFormatter.configure()
-                            .clientProperties(Accumulo.newClientProperties().to(instanceName, zooKeepers).as(userName, new PasswordToken(password)).build())
-                            .createTables(true).store(job);
+            CBMutationOutputFormatter.configure(job.getConfiguration()).createTables(true).store(job);
             job.setOutputFormatClass(CBMutationOutputFormatter.class);
         } else {
             FileOutputFormat.setOutputPath(job, new Path(workDirPath, "mapFiles"));
             job.setOutputFormatClass(MultiRFileOutputFormatter.class);
         }
-        
+
         // Setup the location for the history output (old and new property names)
         job.getConfiguration().setIfUnset("hadoop.job.history.user.location", workDirPath + "/mapFiles");
         job.getConfiguration().setIfUnset("mapreduce.job.userhistorylocation", workDirPath + "/mapFiles");
-        
+
         // verbose counters will add counters showing the output in the EventMapper, and the input to the reducers
         if (verboseCounters) {
             job.getConfiguration().setBoolean("verboseCounters", true);
         }
-        
+
         // we always want the job to use our jars instead of the ones in $HADOOP_HOME/lib
         job.getConfiguration().setBoolean("mapreduce.job.user.classpath.first", true);
-        
+
         // fetch the multiple numshards cache, if necessary
         if (job.getConfiguration().getBoolean(NumShards.ENABLE_MULTIPLE_NUMSHARDS, false)) {
             NumShards numShards = new NumShards(job.getConfiguration());
             String multipleNumShardsConfig = numShards.readMultipleNumShardsConfig();
-            
+
             // this could return empty string, if the feature is enabled, but no entries in the metadata table
             // if it didn't throw RuntimeException, it found a valid cache file
             job.getConfiguration().set(NumShards.PREFETCHED_MULTIPLE_NUMSHARDS_CONFIGURATION, multipleNumShardsConfig == null ? "" : multipleNumShardsConfig);
         }
     }
-    
+
     /**
      * @param keyValue
      *            of format 'key=value'
@@ -1071,13 +1055,13 @@ public class IngestJob implements Tool {
             confOverrides.add(strArr);
         }
     }
-    
+
     private void updateConfWithOverrides(Configuration conf) {
         for (String[] conOverride : confOverrides) {
             conf.set(conOverride[0], conOverride[1]);
         }
     }
-    
+
     protected int jobFailed(Job job, RunningJob runningJob, FileSystem fs, Path workDir) throws IOException {
         log.error("Map Reduce job " + job.getJobName() + " was unsuccessful. Check the logs.");
         log.error("Since job was not successful, deleting work directory: " + workDir);
@@ -1093,11 +1077,11 @@ public class IngestJob implements Tool {
             return -3;
         }
     }
-    
+
     protected boolean createFileWithRetries(FileSystem fs, Path file) throws IOException, InterruptedException {
         return createFileWithRetries(fs, file, file);
     }
-    
+
     protected boolean createFileWithRetries(FileSystem fs, Path file, Path verification) throws IOException, InterruptedException {
         Exception exception = null;
         // we will attempt this 10 times at most....
@@ -1132,13 +1116,13 @@ public class IngestJob implements Tool {
             log.error("Failed to create " + file, exception);
         }
         return false;
-        
+
     }
-    
+
     protected boolean markJobComplete(FileSystem fs, Path workDir) throws IOException, InterruptedException {
         return createFileWithRetries(fs, new Path(workDir, "job.complete"), new Path(workDir, "job.[^p]*"));
     }
-    
+
     /**
      * Get the files to process
      *
@@ -1187,14 +1171,14 @@ public class IngestJob implements Tool {
         }
         return inputPathList.toArray(new Path[inputPathList.size()]);
     }
-    
+
     protected FileSystem getFileSystem(Configuration conf, URI uri) throws IOException {
         return (uri == null ? FileSystem.get(conf) : FileSystem.get(uri, conf));
     }
-    
+
     /**
      * Writes the input paths for this job into the work directory in a file named "job.paths"
-     * 
+     *
      * @param fs
      *            the filesystem
      * @param workDir
@@ -1212,10 +1196,10 @@ public class IngestJob implements Tool {
         }
         ps.close();
     }
-    
+
     /**
      * Writes the flag file for this job into the work directory in a file with the same name
-     * 
+     *
      * @param fs
      *            the file system
      * @param workDir
@@ -1225,19 +1209,19 @@ public class IngestJob implements Tool {
      * @throws IOException
      *             for read or write related issues
      */
-    
+
     protected void writeFlagFile(FileSystem fs, Path workDir, String flagFileName) throws IOException {
         File flagFile = new File(flagFileName);
         if (!flagFile.exists() || !flagFile.isFile() || !flagFile.canRead()) {
             throw new IOException("Unable to access " + flagFile + " for copying into hdfs " + workDir + " directory");
         }
-        
+
         try (InputStream is = new BufferedInputStream(new FileInputStream(flagFile))) {
             String flagFileBase = getBaseFlagFileName(flagFile.getName());
             Path destFile = new Path(workDir, flagFileBase);
             log.info("Copying flag file into " + destFile);
             try (OutputStream os = new BufferedOutputStream(fs.create(destFile))) {
-                
+
                 byte[] buffer = new byte[2048];
                 int bytesRead = is.read(buffer);
                 while (bytesRead >= 0) {
@@ -1249,7 +1233,7 @@ public class IngestJob implements Tool {
             }
         }
     }
-    
+
     /*
      * Get the base flag filename. The name supplied may have something line '.inprogress' tagged on the end. Return everything up to and including .flag.
      */
@@ -1265,10 +1249,10 @@ public class IngestJob implements Tool {
             }
         }
     }
-    
+
     /**
      * Marks the input files given to this job as loaded by moving them from the "flagged" directory to the "loaded" directory.
-     * 
+     *
      * @param fs
      *            the filesystem
      * @param inputPaths
@@ -1294,16 +1278,16 @@ public class IngestJob implements Tool {
                 }
             }
         }
-        
+
         // notify observers
         jobObservable.setJobId(jobID.toString());
     }
-    
+
     /**
      * Some properties cannot be set using the new API. However, we know internally that the configuration Hadoop uses is really just the old JobConf which
      * exposes the methods we want. In particular, we have to turn off speculative execution since we are loading data and don't want Hadoop to spawn many
      * speculative tasks that will load duplicate data.
-     * 
+     *
      * @param conf
      *            the configuration
      * @param value
@@ -1315,12 +1299,12 @@ public class IngestJob implements Tool {
             jobConf.setMapSpeculativeExecution(value);
         }
     }
-    
+
     /**
      * Some properties cannot be set using the new API. However, we know internally that the configuration Hadoop uses is really just the old JobConf which
      * exposes the methods we want. In particular, we have to turn off speculative execution since we are loading data and don't want Hadoop to spawn many
      * speculative tasks that will load duplicate data.
-     * 
+     *
      * @param conf
      *            the configuration
      * @param value
@@ -1332,7 +1316,7 @@ public class IngestJob implements Tool {
             jobConf.setReduceSpeculativeExecution(value);
         }
     }
-    
+
     /**
      * Configures the output formatter with the correct accumulo instance information, splits file, and shard table.
      *
@@ -1340,31 +1324,49 @@ public class IngestJob implements Tool {
      *            hadoop configuration
      * @param compressionType
      *            type of compression to use for the output format
-     * @param compressionTableBlackList
+     * @param compressionTableDisallowList
      *            a set of table names for which we will not compress the rfile output
      * @param maxEntries
      *            the max entries
      * @param maxSize
      *            the max size
      */
-    public static void configureMultiRFileOutputFormatter(Configuration config, String compressionType, Set<String> compressionTableBlackList, int maxEntries,
-                    long maxSize) {
-        IngestJob.configureMultiRFileOutputFormatter(config, compressionType, compressionTableBlackList, maxEntries, maxSize, false);
+    public static void configureMultiRFileOutputFormatter(Configuration config, String compressionType, Set<String> compressionTableDisallowList,
+                    int maxEntries, long maxSize) {
+        IngestJob.configureMultiRFileOutputFormatter(config, compressionType, compressionTableDisallowList, maxEntries, maxSize, false);
     }
-    
-    public static void configureMultiRFileOutputFormatter(Configuration config, String compressionType, Set<String> compressionTableBlackList, int maxEntries,
-                    long maxSize, boolean generateMapFileRowKeys) {
+
+    public static void configureMultiRFileOutputFormatter(Configuration config, String compressionType, Set<String> compressionTableDisallowList,
+                    int maxEntries, long maxSize, boolean generateMapFileRowKeys) {
         MultiRFileOutputFormatter.setAccumuloConfiguration(config);
         if (compressionType != null) {
             MultiRFileOutputFormatter.setCompressionType(config, compressionType);
         }
-        if (compressionTableBlackList != null) {
-            MultiRFileOutputFormatter.setCompressionTableBlackList(config, compressionTableBlackList);
+        if (compressionTableDisallowList != null) {
+            MultiRFileOutputFormatter.setCompressionTableDisallowList(config, compressionTableDisallowList);
         }
         MultiRFileOutputFormatter.setRFileLimits(config, maxEntries, maxSize);
         MultiRFileOutputFormatter.setGenerateMapFileRowKeys(config, generateMapFileRowKeys);
     }
-    
+
+    public static Set<String> setupAndCacheTables(Configuration conf, boolean createTables)
+                    throws IOException, AccumuloException, TableNotFoundException, AccumuloSecurityException {
+        TableConfigurationUtil tableConfigUtil = new TableConfigurationUtil(conf);
+        tableConfigUtil.registerTableNamesFromConfigFiles(conf);
+        Set<String> tableNames = tableConfigUtil.getJobOutputTableNames(conf);
+
+        if (createTables) {
+            boolean wasConfigureTablesSuccessful = tableConfigUtil.configureTables(conf);
+            if (!wasConfigureTablesSuccessful) {
+                throw new RuntimeException("Could not create tables");
+            }
+        }
+
+        tableConfigUtil.serializeTableConfgurationIntoConf(conf);
+
+        return tableNames;
+    }
+
     protected void startDaemonProcesses(Configuration configuration) {
         String daemonClassNames = configuration.get(DAEMON_PROCESSES_PROPERTY);
         if (daemonClassNames == null) {
@@ -1374,7 +1376,7 @@ public class IngestJob implements Tool {
             try {
                 @SuppressWarnings("unchecked")
                 Class<? extends Runnable> daemonClass = (Class<? extends Runnable>) Class.forName(className.trim());
-                Runnable daemon = daemonClass.newInstance();
+                Runnable daemon = daemonClass.getDeclaredConstructor().newInstance();
                 if (daemon instanceof Configurable) {
                     Configurable configurable = (Configurable) daemon;
                     configurable.setConf(configuration);
@@ -1382,24 +1384,24 @@ public class IngestJob implements Tool {
                 Thread daemonThread = new Thread(daemon);
                 daemonThread.setDaemon(true);
                 daemonThread.start();
-            } catch (ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+            } catch (ClassNotFoundException | IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException e) {
                 throw new IllegalArgumentException(e);
             }
         }
     }
-    
+
     protected void distCpDirectory(Path workDir, FileSystem src, FileSystem dest, Configuration distcpConfig, boolean deleteAfterDistCp) throws Exception {
         Path srcPath = src.makeQualified(workDir);
         Path destPath = dest.makeQualified(workDir);
         Path logPath = new Path(destPath, "logs");
-        
+
         // Make sure the destination path doesn't already exist, so that distcp won't
         // complain. We could add -i to the distcp command, but we don't want to hide
         // any other failures that we might care about (such as map files failing to
         // copy). We know the distcp target shouldn't exist, so if it does, it could
         // only be from a previous failed attempt.
         dest.delete(destPath, true);
-        
+
         // NOTE: be careful with the preserve option. We only want to preserve user, group, and permissions but
         // not carry block size or replication across. This is especially important because by default the
         // MapReduce jobs produce output with the replication set to 1 and we definitely don't want to preserve
@@ -1419,7 +1421,7 @@ public class IngestJob implements Tool {
             .withBlocking(true)
             .build();
         //@formatter:on
-        
+
         DistCp cp = new DistCp(distcpConfig, options);
         log.info("Starting distcp from " + srcPath + " to " + destPath + " with configuration: " + options);
         try {
@@ -1432,32 +1434,32 @@ public class IngestJob implements Tool {
         for (FileStatus destFile : dest.listStatus(destPath)) {
             destFiles.put(destFile.getPath().getName(), destFile);
         }
-        
+
         for (FileStatus srcFile : src.listStatus(srcPath)) {
             FileStatus destFile = destFiles.get(srcFile.getPath().getName());
             if (destFile == null || destFile.getLen() != srcFile.getLen()) {
                 throw new RuntimeException("DistCp failed to copy " + srcFile.getPath());
             }
         }
-        
+
         // now we can clean up the src job directory
         if (deleteAfterDistCp) {
             src.delete(srcPath, true);
         }
     }
-    
+
     protected boolean writeStats(Logger log, Job job, JobID jobId, Counters counters, long start, long stop, boolean outputMutations, FileSystem fs,
                     Path statsDir, String metricsLabelOverride) throws IOException, InterruptedException {
-        
+
         Configuration conf = job.getConfiguration();
-        
+
         // We are going to serialize the counters into a file in HDFS.
         // The context was set in the processKeyValues method below, and should not be null. We'll guard against NPE anyway
         try (RawLocalFileSystem rawFS = new RawLocalFileSystem()) {
             rawFS.setConf(conf);
             CompressionCodec cc = new GzipCodec();
             CompressionType ct = CompressionType.BLOCK;
-            
+
             // Add additional counters
             if (!outputMutations) {
                 counters.findCounter(IngestProcess.OUTPUT_DIRECTORY.name(), job.getWorkingDirectory().getName()).increment(1);
@@ -1466,11 +1468,11 @@ public class IngestJob implements Tool {
             }
             counters.findCounter(IngestProcess.START_TIME).increment(start);
             counters.findCounter(IngestProcess.END_TIME).increment(stop);
-            
+
             if (metricsLabelOverride != null) {
                 counters.getGroup(IngestProcess.METRICS_LABEL_OVERRIDE.name()).findCounter(metricsLabelOverride).increment(1);
             }
-            
+
             // Serialize the counters to a file in HDFS.
             Path src = new Path("/tmp" + File.separator + job.getJobName() + ".metrics");
             src = rawFS.makeQualified(src);
@@ -1479,7 +1481,7 @@ public class IngestJob implements Tool {
                             Writer.compression(ct, cc))) {
                 writer.append(new Text(jobId.toString()), counters);
             }
-            
+
             // Now we will try to move the file to HDFS.
             // Copy the file to the temp dir
             try {
@@ -1509,14 +1511,14 @@ public class IngestJob implements Tool {
                 statsd.close();
             }
         }
-        
+
         return true;
     }
-    
+
     private Path getCrcFile(Path path) {
         return new Path(path.getParent(), "." + path.getName() + ".crc");
     }
-    
+
     /**
      * Output some verbose counters
      *
@@ -1532,11 +1534,11 @@ public class IngestJob implements Tool {
     @SuppressWarnings("rawtypes")
     public static void verboseCounters(TaskInputOutputContext context, String location, Text tableName, Mutation mutation) {
         for (KeyValue keyValue : getKeyValues(mutation)) {
-            verboseCounter(context, location, tableName, keyValue.getKey().getRow().getBytes(), keyValue.getKey().getColumnFamily().getBytes(), keyValue
-                            .getKey().getColumnQualifier().getBytes(), keyValue.getKey().getColumnVisibility(), keyValue.getValue().get());
+            verboseCounter(context, location, tableName, keyValue.getKey().getRow().getBytes(), keyValue.getKey().getColumnFamily().getBytes(),
+                            keyValue.getKey().getColumnQualifier().getBytes(), keyValue.getKey().getColumnVisibility(), keyValue.getValue().get());
         }
     }
-    
+
     /**
      * Output some verbose counters. Since the input is an iterable, this will cache the values in a list and return the new iterable.
      *
@@ -1559,7 +1561,7 @@ public class IngestJob implements Tool {
         }
         return valueList;
     }
-    
+
     /**
      * Output some verbose counters
      *
@@ -1574,10 +1576,10 @@ public class IngestJob implements Tool {
      */
     @SuppressWarnings("rawtypes")
     public static void verboseCounters(TaskInputOutputContext context, String location, BulkIngestKey key, Value value) {
-        verboseCounter(context, location, key.getTableName(), key.getKey().getRow().getBytes(), key.getKey().getColumnFamily().getBytes(), key.getKey()
-                        .getColumnQualifier().getBytes(), key.getKey().getColumnVisibility(), value.get());
+        verboseCounter(context, location, key.getTableName(), key.getKey().getRow().getBytes(), key.getKey().getColumnFamily().getBytes(),
+                        key.getKey().getColumnQualifier().getBytes(), key.getKey().getColumnVisibility(), value.get());
     }
-    
+
     /**
      * Output a verbose counter
      *
@@ -1606,12 +1608,12 @@ public class IngestJob implements Tool {
                         + Key.toPrintableString(colFamily, 0, colFamily.length, Constants.MAX_DATA_TO_PRINT) + ":"
                         + Key.toPrintableString(colQualifier, 0, colQualifier.length, Constants.MAX_DATA_TO_PRINT) + " " + labelString + " "
                         + (val == null ? "null" : String.valueOf(val.length) + " value bytes");
-        
+
         s = s.replace('\n', ' ');
-        
+
         context.getCounter("TABLE.KEY.VALUElen", tableName.toString() + ' ' + location + ' ' + s).increment(1);
     }
-    
+
     /**
      * Turn a mutation's column update into a key
      *
@@ -1622,17 +1624,17 @@ public class IngestJob implements Tool {
     public static List<KeyValue> getKeyValues(Mutation m) {
         List<KeyValue> values = new ArrayList<>();
         for (ColumnUpdate update : m.getUpdates()) {
-            values.add(new KeyValue(new Key(m.getRow(), update.getColumnFamily(), update.getColumnQualifier(), update.getColumnVisibility(), (update
-                            .hasTimestamp() ? update.getTimestamp() : -1), update.isDeleted()), update.getValue()));
+            values.add(new KeyValue(new Key(m.getRow(), update.getColumnFamily(), update.getColumnQualifier(), update.getColumnVisibility(),
+                            (update.hasTimestamp() ? update.getTimestamp() : -1), update.isDeleted()), update.getValue()));
         }
         return values;
     }
-    
+
     @Override
     public Configuration getConf() {
         return hadoopConfiguration;
     }
-    
+
     @Override
     public void setConf(Configuration conf) {
         this.hadoopConfiguration = conf;
